modified fetch url

--- a/public/index.html
+++ b/public/index.html
@@ -134,7 +134,7 @@
         return;
       }
       try {
-        const res = await fetch("https://sendgrid-demo-production.up.railway.app/send-email", {
+        const res = await fetch("https://sendgrid-demo-production.up.railway.app", {
           method: "POST",
           headers: {
             "Content-Type": "application/json",
